# Auto-generate-images-with-Gemini

./: README.md  pyproject.toml  requirements.txt  run_gemini.py  run_gemini_gui.py  run_gemini_headless.py  setup.py
examples/: __init__.py  batch_example.py  simple_example.py
gemini_automation/: __init__.py  auth.py  cli.py  client.py
gemini_automation/browser/: __init__.py  driver.py
gemini_automation/generator/: __init__.py  image_generator.py
gemini_automation/session/: __init__.py  login.py  manager.py
gemini_automation/utils/: __init__.py  filename.py
